third_party/move/move-prover/tests/sources/functional/closures/inline/opaque_inline_escape_fail.exp
Move prover returns: exiting with compilation errors
error: a closure capturing references cannot be passed to this call: the callee may leak function values through its result or a `&mut` parameter
   ┌─ tests/sources/functional/closures/inline/opaque_inline_escape_fail.move:20:17
   │
20 │         let g = id_fun(|i| x = x + i spec { ensures x == old(x) + i; }); // error: callee may leak function values
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = such a closure must not outlive the call, since its captured locations are only modeled at this call site

error: a closure capturing references cannot be passed to this call: the callee may leak function values through its result or a `&mut` parameter
   ┌─ tests/sources/functional/closures/inline/opaque_inline_escape_fail.move:37:9
   │
37 │         stash(|i| x = x + i spec { ensures x == old(x) + i; }, &mut s); // error: callee may leak function values
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = such a closure must not outlive the call, since its captured locations are only modeled at this call site

error: a closure capturing references cannot be passed to this call: the callee may leak function values through its result or a `&mut` parameter
   ┌─ tests/sources/functional/closures/inline/opaque_inline_escape_fail.move:55:18
   │
55 │         let _h = wrap(|i| x = x + i spec { ensures x == old(x) + i; }); // error: callee may leak function values
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = such a closure must not outlive the call, since its captured locations are only modeled at this call site

error: a closure capturing references cannot be passed to this call: the callee may leak function values through its result or a `&mut` parameter
   ┌─ tests/sources/functional/closures/inline/opaque_inline_escape_fail.move:74:24
   │
74 │         let (_a, _b) = wrap_pair(|i| x = x + i spec { ensures x == old(x) + i; }); // error: callee may leak function values
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = such a closure must not outlive the call, since its captured locations are only modeled at this call site
